// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksList When there are tasks renders correctly 1`] = `
<main
  className="MuiBox-root MuiBox-root-2"
  data-testid="task-list-page"
>
  <NavBar
    type="menu"
  />
  <AppBar
    color="inherit"
    component="section"
    position="static"
  >
    <AvatarHeader />
    <Tabs
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </AppBar>
  <TabPanel
    index={0}
    value={0}
  >
    <TaskTabsContent
      loading={true}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <TabPanel
    index={1}
    value={0}
  >
    <TaskTabsContent
      loading={true}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <PlusButton
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    title="Add new task"
    to={
      Object {
        "pathname": "/buddy/newbies/1234/add-task",
        "state": Object {
          "tabIndex": 0,
        },
      }
    }
  />
</main>
`;

exports[`Component - TasksList When there are tasks renders correctly 2`] = `
<main
  className="MuiBox-root MuiBox-root-2"
  data-testid="task-list-page"
>
  <NavBar
    type="menu"
  />
  <AppBar
    color="inherit"
    component="section"
    position="static"
  >
    <AvatarHeader />
    <Tabs
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </AppBar>
  <TabPanel
    index={0}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <TabPanel
    index={1}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <PlusButton
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    title="Add new task"
    to={
      Object {
        "pathname": "/buddy/newbies/1234/add-task",
        "state": Object {
          "tabIndex": 0,
        },
      }
    }
  />
</main>
`;

exports[`Component - TasksList when there are not tasks should render empty state 1`] = `
<main
  className="MuiBox-root MuiBox-root-3"
  data-testid="task-list-page"
>
  <NavBar
    type="menu"
  />
  <AppBar
    color="inherit"
    component="section"
    position="static"
  >
    <AvatarHeader />
    <Tabs
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </AppBar>
  <TabPanel
    index={0}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <TabPanel
    index={1}
    value={0}
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
      tabIndex={0}
    />
  </TabPanel>
  <PlusButton
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    title="Add new task"
    to={
      Object {
        "pathname": "/buddy/newbies/1234/add-task",
        "state": Object {
          "tabIndex": 0,
        },
      }
    }
  />
</main>
`;
